// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EmptyState > snapshot: basic empty state 1`] = `
<div
  class="rh-empty ant-empty ant-empty-normal rh-empty-state"
>
  <div
    class="rh-empty__image ant-empty-image"
  >
    <svg
      aria-hidden="true"
      class="rh-empty__art"
      height="96"
      viewBox="0 0 120 96"
      width="120"
    >
      <rect
        height="52"
        rx="16"
        width="84"
        x="18"
        y="24"
      />
      <path
        d="M30 42h60M38 56h44"
      />
      <circle
        cx="88"
        cy="30"
        r="10"
      />
    </svg>
  </div>
  <div
    class="rh-empty__description ant-empty-description"
  >
    У вас пока нет бронирований
  </div>
</div>
`;

exports[`EmptyState > snapshot: empty state with action 1`] = `
<div
  class="rh-empty ant-empty ant-empty-normal rh-empty-state"
>
  <div
    class="rh-empty__image ant-empty-image"
  >
    <svg
      aria-hidden="true"
      class="rh-empty__art"
      height="96"
      viewBox="0 0 120 96"
      width="120"
    >
      <rect
        height="52"
        rx="16"
        width="84"
        x="18"
        y="24"
      />
      <path
        d="M30 42h60M38 56h44"
      />
      <circle
        cx="88"
        cy="30"
        r="10"
      />
    </svg>
  </div>
  <div
    class="rh-empty__description ant-empty-description"
  >
    Ваш список избранного пуст
  </div>
  <div
    class="rh-empty__footer ant-empty-footer"
  >
    <button
      class="rh-btn rh-btn--primary"
      type="button"
    >
      Найти баню
    </button>
  </div>
</div>
`;
